[package]
name = "login"
version = "0.1.0"
authors = ["marty"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17"
serde_json = "1.0.59"
anyhow = "1.0.40"
rocketlauncher = { git = "https://github.com/MorezMartin/rocketlauncher.git", version="0.1.0" }
serde = "1.0.117"
getrandom = { version = "0.2" , features = ["js"] }
